@@ -1,227 +1,173 @@
 package com.hnp.filemanagement.service;
 
-import com.hnp.filemanagement.support.MySqlSupport;
-
 import com.hnp.filemanagement.dto.PermissionDTO;
+import com.hnp.filemanagement.dto.RoleDTO;
 import com.hnp.filemanagement.entity.Permission;
-import com.hnp.filemanagement.entity.PermissionEnum;
 import com.hnp.filemanagement.entity.Role;
-import com.hnp.filemanagement.entity.User;
 import com.hnp.filemanagement.exception.DuplicateResourceException;
 import com.hnp.filemanagement.exception.InvalidDataException;
-import com.hnp.filemanagement.repository.ActionHistoryRepository;
+import com.hnp.filemanagement.exception.ResourceNotFoundException;
 import com.hnp.filemanagement.repository.PermissionRepository;
 import com.hnp.filemanagement.repository.RoleRepository;
 import com.hnp.filemanagement.repository.UserRepository;
-import jakarta.persistence.EntityManager;
-import org.junit.jupiter.api.AfterEach;
+import com.hnp.filemanagement.config.bootstrap.DataInitializer;
+import com.hnp.filemanagement.support.MySqlSupport;
+import com.hnp.filemanagement.support.ServiceIntegrationTest;
+import com.hnp.filemanagement.support.TestData;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.jdbc.test.autoconfigure.AutoConfigureTestDatabase;
-import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
-import org.springframework.test.annotation.Commit;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-@DataJpaTest
-@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
+/**
+ * {@link RoleService} against a real database.
+ *
+ * <p>The permission rows come from {@code DataInitializer}, which seeds one per
+ * {@code PermissionEnum} constant at start-up, so these tests read them rather than inventing any.
+ */
+@ServiceIntegrationTest
 class RoleServiceTest extends MySqlSupport {
 
-
-
-
     @Autowired
-    private EntityManager entityManager;
-
-    @Autowired
-    private ActionHistoryRepository actionHistoryRepository;
+    private RoleService underTest;
     @Autowired
     private RoleRepository roleRepository;
-
     @Autowired
     private PermissionRepository permissionRepository;
-
     @Autowired
     private UserRepository userRepository;
+    @Autowired
+    private DataInitializer dataInitializer;
 
-    private RoleService underTest;
-
-    private ActionHistoryService actionHistoryService;
-
-    private int role1Id = 0;
-
-    private int userId = 0;
+    private int principalId;
+    private int roleId;
+    private List<Integer> somePermissionIds;
 
     @BeforeEach
     void setUp() {
+        // The bootstrap is off on the test profile, and this suite needs what it seeds: one
+        // permission row per enum constant, and the two fixed roles. It is idempotent by design.
+        dataInitializer.initialize();
 
-        actionHistoryService = new ActionHistoryService(entityManager, actionHistoryRepository);
-        underTest = new RoleService(roleRepository, permissionRepository, entityManager, actionHistoryService);
+        principalId = userRepository.save(TestData.user()).getId();
 
-        Permission p1 = new Permission();
-        p1.setPermissionName(PermissionEnum.CREATE_FILE_CATEGORY_PAGE);
-        p1.setDescription("READ ALL");
+        Role role = roleRepository.save(TestData.role("ROLE_" + TestData.nextSequence()));
+        roleId = role.getId();
 
-        Permission p2 = new Permission();
-        p2.setPermissionName(PermissionEnum.SAVE_NEW_FILE_CATEGORY);
-        p2.setDescription("WRITE ALL");
-
-        Permission p3 = new Permission();
-        p3.setPermissionName(PermissionEnum.UPDATE_FILE_CATEGORY_PAGE);
-        p3.setDescription("DELETE ALL");
-
-        this.permissionRepository.saveAll(List.of(p1, p2, p3));
-
-
-        Role role1 = new Role();
-        role1.setRoleName("USER");
-        role1.setPermissions(List.of(p1));
-
-        roleRepository.save(role1);
-
-        role1Id = role1.getId();
-
-        User user1 = new User();
-        user1.setUsername("admin username");
-        user1.setPassword("password");
-        user1.setFirstName("name");
-        user1.setLastName("family");
-        user1.setPhoneNumber("009843435");
-        user1.setNationalCode("5252525");
-        user1.setPersonelCode(1111);
-        user1.setCreatedAt(LocalDateTime.now());
-        user1.setEnabled(1);
-        user1.setState(0);
-
-        userRepository.save(user1);
-
-        userId = user1.getId();
-
-
-    }
-
-    @AfterEach
-    void tearDown() {
-
-        // Delete the owning sides first: user owns user_role, role owns permission_role.
-        actionHistoryRepository.deleteAll();
-        userRepository.deleteAll();
-        roleRepository.deleteAll();
-        permissionRepository.deleteAll();
+        somePermissionIds = permissionRepository.findAll().stream()
+                .limit(3)
+                .map(Permission::getId)
+                .toList();
+        assertThat(somePermissionIds).hasSize(3);
     }
 
     @Test
-    @Commit
-    void createRoleWithoutPermissionTest() {
+    @DisplayName("a role can be created with no permissions at all")
+    void createsARoleWithoutPermissions() {
+        String name = "EMPTY_" + TestData.nextSequence();
 
-        String roleName = "MANAGER";
-        underTest.createRole(roleName, null, userId);
+        underTest.createRole(name, null, principalId);
 
-        Optional<Role> optionalRole = roleRepository.findByRoleName(roleName);
-        assertThat(optionalRole.isPresent()).isTrue();
-
+        RoleDTO created = underTest.getRoleDtoByRoleName(name);
+        assertThat(created.getPermissionDTOS()).isEmpty();
     }
 
     @Test
-    @Commit
-    void createRoleWithPermissionTest() {
+    @DisplayName("only the permissions marked selected are attached")
+    void createsARoleWithTheSelectedPermissions() {
+        String name = "SOME_" + TestData.nextSequence();
 
-        List<PermissionDTO> permissionDTOList = permissionRepository.findAll()
-                .stream().map(permission -> {
-                    PermissionDTO p = new PermissionDTO();
-                    p.setId(permission.getId());
-                    p.setSelected(true);
-                    return p;
-                }).toList();
-        String roleName = "MANAGER";
+        List<PermissionDTO> request = permissionRepository.findByIdIn(somePermissionIds).stream()
+                .map(permission -> {
+                    PermissionDTO dto = new PermissionDTO();
+                    dto.setId(permission.getId());
+                    dto.setSelected(permission.getId().equals(somePermissionIds.getFirst()));
+                    return dto;
+                })
+                .toList();
 
-        underTest.createRole(roleName, permissionDTOList, userId);
+        underTest.createRole(name, request, principalId);
 
-        Optional<Role> createdRoleOptional = roleRepository.findByRoleName(roleName);
-        assertThat(createdRoleOptional.isPresent()).isTrue();
-        assertThat(createdRoleOptional.get().getPermissions().size()).isEqualTo(3);
-
-
+        assertThat(underTest.getRoleDtoByRoleName(name).getPermissionDTOS())
+                .extracting(PermissionDTO::getId)
+                .containsExactly(somePermissionIds.getFirst());
     }
 
     @Test
-    @Commit
-    void createDuplicateRoleTest() {
+    @DisplayName("a duplicate role name is a 409")
+    void rejectsADuplicateRoleName() {
+        String taken = roleRepository.findById(roleId).orElseThrow().getRoleName();
 
-        String roleName = "USER";
-        assertThatThrownBy(
-                () -> underTest.createRole(roleName, null, userId)
-        ).isInstanceOf(DuplicateResourceException.class);
+        assertThatThrownBy(() -> underTest.createRole(taken, null, principalId))
+                .isInstanceOf(DuplicateResourceException.class);
     }
 
     @Test
-    @Commit
-    void updatePermissionOfRoleTest() {
-        Role role = roleRepository.findByRoleName("USER").get();
-        Permission permission = permissionRepository.findByPermissionName(PermissionEnum.UPDATE_FILE_CATEGORY_PAGE).get();
-        PermissionDTO permissionDTO = new PermissionDTO();
-        permissionDTO.setSelected(true);
-        permissionDTO.setId(permission.getId());
+    @DisplayName("updating replaces the whole set - the page posts the complete selection")
+    void replacesThePermissionsOfARole() {
+        underTest.updatePermissionsOfRole(roleId, somePermissionIds, principalId);
+        assertThat(underTest.getRoleDtoById(roleId).getPermissionDTOS()).hasSize(3);
 
-//        List<PermissionDTO> permissionDTOList = new ArrayList<>();
-//        permissionDTOList.addAll(List.of(permissionDTO));
-
-        underTest.updatePermissionsOfRole(role.getId(), List.of(permissionDTO.getId()), userId);
-
-        Role updatedRole = roleRepository.findByRoleName("USER").get();
-        assertThat(updatedRole.getPermissions().size()).isEqualTo(1);
-        assertThat(updatedRole.getPermissions().get(0).getPermissionName()).isEqualTo(PermissionEnum.UPDATE_FILE_CATEGORY_PAGE);
-
+        underTest.updatePermissionsOfRole(roleId, List.of(somePermissionIds.getFirst()), principalId);
+        assertThat(underTest.getRoleDtoById(roleId).getPermissionDTOS())
+                .extracting(PermissionDTO::getId)
+                .containsExactly(somePermissionIds.getFirst());
     }
 
     @Test
-    @Commit
-    void updatePermissionOfRoleWithEmptyListTest() {
-        Role role = roleRepository.findByRoleName("USER").get();
+    @DisplayName("an empty list removes every permission")
+    void anEmptyListClearsThePermissions() {
+        underTest.updatePermissionsOfRole(roleId, somePermissionIds, principalId);
 
-        underTest.updatePermissionsOfRole(role.getId(), new ArrayList<>(), userId);
+        underTest.updatePermissionsOfRole(roleId, List.of(), principalId);
 
-        Role updatedRole = roleRepository.findByRoleName("USER").get();
-        assertThat(updatedRole.getPermissions().size()).isEqualTo(0);
-
+        assertThat(underTest.getRoleDtoById(roleId).getPermissionDTOS()).isEmpty();
     }
 
     @Test
-    @Commit
-    void updatePermissionOfRoleWithInvalidListTest() {
-        Role role = roleRepository.findByRoleName("USER").get();
-        PermissionDTO permissionDTO = new PermissionDTO();
-        permissionDTO.setId(34523);
-        permissionDTO.setSelected(true);
-
-        assertThatThrownBy(
-                () -> underTest.updatePermissionsOfRole(role.getId(), List.of(permissionDTO.getId()), userId)
-        ).isInstanceOf(InvalidDataException.class);
-
-
+    @DisplayName("a null list is a 400 - it is not the same as an empty one")
+    void aNullListIsRejected() {
+        assertThatThrownBy(() -> underTest.updatePermissionsOfRole(roleId, null, principalId))
+                .isInstanceOf(InvalidDataException.class);
     }
-
 
     @Test
-    @Commit
-    void getAllPermissionsOfRoleWithSelectedTest() {
-
-        List<PermissionDTO> allPermissionsOfRoleWithSelected = underTest.getAllPermissionsOfRoleWithSelected(role1Id);
-        List<PermissionDTO> permissionDtoSelected = allPermissionsOfRoleWithSelected.stream().filter(PermissionDTO::isSelected).toList();
-
-        assertThat(allPermissionsOfRoleWithSelected.size()).isEqualTo(3);
-        assertThat(permissionDtoSelected.size()).isEqualTo(1);
-
+    @DisplayName("an unknown permission id rejects the whole call")
+    void anUnknownPermissionIdIsRejected() {
+        assertThatThrownBy(() -> underTest.updatePermissionsOfRole(roleId, List.of(0), principalId))
+                .isInstanceOf(InvalidDataException.class);
     }
 
+    @Test
+    @DisplayName("a role that does not exist is a 404")
+    void anUnknownRoleIsNotFound() {
+        assertThatThrownBy(() -> underTest.updatePermissionsOfRole(0, List.of(), principalId))
+                .isInstanceOf(ResourceNotFoundException.class);
+    }
 
+    @Test
+    @DisplayName("the checkbox list is every permission, with the held ones flagged")
+    void marksTheHeldPermissionsAsSelected() {
+        underTest.updatePermissionsOfRole(roleId, somePermissionIds, principalId);
 
+        List<PermissionDTO> all = underTest.getAllPermissionsOfRoleWithSelected(roleId);
 
+        assertThat(all).hasSize((int) permissionRepository.count());
+        assertThat(all).filteredOn(PermissionDTO::isSelected)
+                .extracting(PermissionDTO::getId)
+                .containsExactlyInAnyOrderElementsOf(somePermissionIds);
+    }
+
+    @Test
+    @DisplayName("the role list includes the one we made")
+    void listsAllRoles() {
+        assertThat(underTest.getAllRoles())
+                .extracting(RoleDTO::getId)
+                .contains(roleId);
+    }
 }
